--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -41,6 +41,16 @@
       "sell": "売る",
       "transfer": "転送"
     },
+    "history": {
+      "auction": "オークション",
+      "event": "イベント",
+      "from": "から",
+      "price": "価格",
+      "sold": "売れた",
+      "title": "取引履歴",
+      "to": "に",
+      "when": "いつ"
+    },
     "publication": {
       "buy": "購入",
       "price": "価格"
@@ -297,16 +307,6 @@
     },
     "description": "説明",
     "empty_description": "この区画に説明文はありません。",
-    "history": {
-      "auction": "オークション",
-      "event": "イベント",
-      "from": "送信者",
-      "price": "価格",
-      "sold": "売却済",
-      "title": "取引履歴",
-      "to": "受信者",
-      "when": "時期"
-    },
     "owner": {
       "no_owner": "所有者なし",
       "part_of": "{name}の一部"
