--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -401,7 +401,7 @@
       "You {action} the {mortgage_contract_link} to operate RCN on your behalf.",
     "pay_mortgage":
       "You made a partial payment of {amount} MANA for the mortgage to buy the parcel {parcel_link}",
-    "publish": "You listed for sale {parcel_link}",
+    "publish": "You listed {parcel_link} for sale",
     "transfer": "You transfered {asset_type} {asset_link} to {owner_link}",
     "transfer_mana": "You transfered {mana} MANA to {address_link}"
   },
