--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -364,6 +364,8 @@
     "authorization_error_contact":
       "Si l'erreur persiste, n'hésitez pas à nous contacter",
     "for_buying": "Pour acheter",
+    "for_buying_LegacyMarketplace": "Actifs utilisant MANA (hérité)",
+    "for_buying_Marketplace": "Actifs utilisant MANA",
     "for_selling": "Pour vendre",
     "legacy_authorization": "Autorisation de legs",
     "pending_tx": "Vous avez une transaction en attente"
