--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -341,6 +341,8 @@
     "authorization_error": "我们无法加载您的授权，请重试",
     "authorization_error_contact": "如果错误仍然存​​在，请不要犹豫与我们联系",
     "for_buying": "购买",
+    "for_buying_LegacyMarketplace": "使用MANA（遗留）的资产",
+    "for_buying_Marketplace": "使用MANA的资产",
     "for_selling": "出售",
     "legacy_authorization": "遗产授权",
     "pending_tx": "您有待处理的交易"
