feat: yours on sale color key

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -118,7 +118,8 @@
     "taken": "Taken",
     "title": "Color key",
     "unowned": "Unowned",
-    "yours": "Yours"
+    "yours": "Yours",
+    "yours_on_sale": "Yours on sale"
   },
   "contribution": {
     "proposal": "proposal"
