--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -118,7 +118,8 @@
     "taken": "取得済",
     "title": "カラーガイド",
     "unowned": "未所有",
-    "yours": "マイランド"
+    "yours": "マイランド",
+    "yours_on_sale": "あなたの販売している"
   },
   "contribution": {
     "proposal": "提案"
